--- a/app/app/src/main/res/layout/activity_signup.xml
+++ b/app/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".landing">
+    tools:context=".signup">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                 android:layout_marginTop="45dp"
                 android:contentDescription="@string/Loanppi_logo"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/ic_full_xhdpi" />
+                app:srcCompat="@drawable/ic_launcher" />
 
             <TextView
                 android:id="@+id/txt_title"
@@ -40,43 +40,12 @@
                 android:autoSizeMinTextSize="22sp"
                 android:autoSizeStepGranularity="2sp"
                 android:autoSizeTextType="uniform"
-                android:text="@string/landing_text"
+                android:text="@string/signup_title"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#000000"
                 android:textSize="22sp" />
-
-            <Button
-                android:id="@+id/btn_works"
-                android:layout_width="175dp"
-                android:layout_height="70dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/btn_works"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="210dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="100sp"
-                android:text="@string/btn_login"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btn_signUp"
-                android:layout_width="210dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:text="@string/btn_signUp"
-                android:onClick="onSignUp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp" />
-
         </LinearLayout>
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
