--- a/app/app/src/main/res/layout/activity_landing.xml
+++ b/app/app/src/main/res/layout/activity_landing.xml
@@ -1,82 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/cartoon_background"
+    tools:layout_editor_absoluteX="1dp"
+    tools:layout_editor_absoluteY="1dp"
     tools:context=".landing">
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:background="@color/background"
+            android:paddingBottom="16dp"
+            tools:context=".landing">
 
             <ImageView
-                android:id="@+id/img_signupLogo"
-                android:layout_width="290dp"
-                android:layout_height="146dp"
-                android:layout_marginTop="45dp"
+                android:id="@+id/img_logo"
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
                 android:contentDescription="@string/Loanppi_logo"
-                android:scaleType="centerInside"
-                app:srcCompat="@drawable/ic_full_xhdpi" />
-
-            <TextView
-                android:id="@+id/txt_title"
-                android:layout_width="280dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="40sp"
-                android:layout_marginTop="60dp"
-                android:layout_marginEnd="40sp"
-                android:autoSizeMaxTextSize="100sp"
-                android:autoSizeMinTextSize="22sp"
-                android:autoSizeStepGranularity="2sp"
-                android:autoSizeTextType="uniform"
-                android:text="@string/landing_text"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="#000000"
-                android:textSize="22sp" />
-
-            <Button
-                android:id="@+id/btn_works"
-                android:layout_width="175dp"
-                android:layout_height="70dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/btn_works"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp" />
+                app:layout_constrainedWidth="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.39"
+                app:layout_constraintWidth_default="spread"
+                app:layout_constraintWidth_max="270dp"
+                app:srcCompat="@drawable/fullxhdpi" />
 
             <Button
                 android:id="@+id/btn_login"
-                android:layout_width="210dp"
+                android:layout_width="200dp"
                 android:layout_height="60dp"
-                android:layout_marginTop="100sp"
+                android:layout_marginTop="80dp"
+                android:background="@drawable/btn_background_white"
+                android:singleLine="false"
                 android:text="@string/btn_login"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp" />
+                android:textColor="@color/textPrimary"
+                android:textSize="@dimen/btnTextSize"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_logo" />
 
             <Button
-                android:id="@+id/btn_signUp"
-                android:layout_width="210dp"
+                android:id="@+id/btn_signup"
+                android:layout_width="200dp"
                 android:layout_height="60dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/btn_background_orange"
                 android:text="@string/btn_signUp"
-                android:onClick="onSignUp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp" />
+                android:textSize="@dimen/btnTextSize"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
