--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="background">#5CFF7979</color>
+    <color name="textPrimary">#1E0400</color>
+
+    <color name="btn_white">#BCFFFFFF</color>
+    <color name="btn_orange">#FFFF441F</color>
 </resources>
