--- a/app/app/src/main/res/layout-land/activity_landing.xml
+++ b/app/app/src/main/res/layout-land/activity_landing.xml
@@ -52,19 +52,20 @@ tools:context=".landing">
             android:singleLine="false"
             android:text="@string/btn_login"
             android:textColor="@color/textPrimary"
-            android:textSize="@dimen/btnTextSize"
+            android:textSize="@dimen/btn_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_logo" />
 
         <Button
-            android:id="@+id/btn_signup"
+            android:id="@+id/btn_sigup"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/btn_background_orange"
+            android:onClick="onSignUp"
             android:text="@string/btn_signUp"
-            android:textSize="@dimen/btnTextSize"
+            android:textSize="@dimen/btn_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_login" />
