--- a/app/app/src/main/res/values/dimen.xml
+++ b/app/app/src/main/res/values/dimen.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="btnTextSize">20sp</dimen>
+    // General
+    <dimen name="btn_text_size">20sp</dimen>
+    <dimen name="title">30sp</dimen>
+    <dimen name="subtitle">20sp</dimen>
+
+    // Signup
+    <dimen name="btn_profiles"></dimen>
 </resources>
