--- a/app/app/src/main/res/layout-land/activity_landing.xml
+++ b/app/app/src/main/res/layout-land/activity_landing.xml
@@ -53,6 +53,7 @@ tools:context=".landing">
             android:text="@string/btn_login"
             android:textColor="@color/textPrimary"
             android:textSize="@dimen/btn_text_size"
+            android:onClick="onLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_logo" />
