--- a/app/app/src/main/res/layout/activity_landing.xml
+++ b/app/app/src/main/res/layout/activity_landing.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/background"
@@ -49,6 +50,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="80dp"
                 android:background="@drawable/btn_background_white"
+                android:onClick="onLogin"
                 android:singleLine="false"
                 android:text="@string/btn_login"
                 android:textColor="@color/textPrimary"
