--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     // General
     <color name="loanppi">#FFFF441F</color>
     <color name="background">#5CFFA4A4</color>
+    <color name="background_inside">#9CFFFFFF</color>
     <color name="textPrimary">#1E0400</color>
 
     // Buttons
@@ -15,4 +16,5 @@
     <color name="btn_orange">#FFFF441F</color>
     <color name="btn_facebook">#3B5998</color>
     <color name="btn_google">#DB4437</color>
+    <color name="btn_dashboard">#B5BCBCBC</color>
 </resources>
