--- a/app/app/src/main/res/layout/dialog_login.xml
+++ b/app/app/src/main/res/layout/dialog_login.xml
@@ -1,39 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:orientation="vertical"
+    android:paddingTop="40dp"
+    android:paddingBottom="40dp">
 
     <TextView
         android:id="@+id/txt_login_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="@string/login_title"
         android:textAlignment="center"
-        android:textColor="@android:color/white"
+        android:textColor="@color/textPrimary"
         android:textSize="@dimen/title" />
 
     <Button
         android:id="@+id/btn_l_facebook"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
         android:background="@drawable/btn_facebook"
+        android:onClick="onFb"
         android:singleLine="false"
         android:text="@string/btn_facebook"
-        android:textSize="@dimen/btn_text_size"
-        android:layout_gravity="center"
-        android:onClick="onFb" />
+        android:textSize="@dimen/btn_text_size" />
 
     <Button
         android:id="@+id/btn_l_google"
         android:layout_width="200dp"
         android:layout_height="60dp"
+        android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:background="@drawable/btn_google"
+        android:onClick="onGo"
         android:text="@string/btn_google"
-        android:textSize="@dimen/btn_text_size"
-        android:layout_gravity="center"
-        android:onClick="onGo" />
+        android:textSize="@dimen/btn_text_size" />
 
 </LinearLayout>
