--- a/app/app/src/main/res/layout/dialog_login.xml
+++ b/app/app/src/main/res/layout/dialog_login.xml
@@ -1,43 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:orientation="vertical"
     android:paddingTop="40dp"
     android:paddingBottom="40dp">
 
     <TextView
         android:id="@+id/txt_login_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:text="@string/login_title"
         android:textAlignment="center"
         android:textColor="@color/textPrimary"
-        android:textSize="@dimen/title" />
+        android:textSize="@dimen/title"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/btn_l_facebook"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:background="@drawable/btn_facebook"
         android:onClick="onFb"
         android:singleLine="false"
         android:text="@string/btn_facebook"
-        android:textSize="@dimen/btn_text_size" />
+        android:textSize="@dimen/btn_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_login_title"
+        app:layout_constraintWidth_percent="0.5" />
 
     <Button
         android:id="@+id/btn_l_google"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/btn_google"
         android:onClick="onGo"
         android:text="@string/btn_google"
-        android:textSize="@dimen/btn_text_size" />
+        android:textSize="@dimen/btn_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_l_facebook"
+        app:layout_constraintWidth_percent="0.5" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
