--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="background_inside">#9CFFFFFF</color>
     <color name="textPrimary">#1E0400</color>
     <color name="white">#FFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
 
     // Buttons
     <color name="btn_white">#BCFFFFFF</color>
