Fix some styles

--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     // Theme
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#FFFF441F</color>
     <color name="colorAccent">#03DAC5</color>
 
     // General
